AMP-NGRX: errors and other bits handled by dispatching actions

--- a/APM-Demo0/src/app/products/product-list/product-list.component.html
+++ b/APM-Demo0/src/app/products/product-list/product-list.component.html
@@ -10,7 +10,7 @@
       <button class="list-group-item list-group-item-action rounded-0"
               *ngFor="let product of products"
               [ngClass]="{'active': product?.id === (selectedProduct$ | async)?.id}"
-              (click)="productSelected(product)">{{
+              (click)="productSelected(product.id)">{{
         product.productName }}
         <ng-container *ngIf="displayCode$ | async">
           {{ product.productCode }}
